--- a/manifests/complete.yaml
+++ b/manifests/complete.yaml
@@ -66,10 +66,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-service-account
@@ -83,10 +83,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
 stringData:
     LICENSE: ''
@@ -100,10 +100,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_CRT: |
@@ -116,10 +116,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
 stringData:
   AUTH_SAML_X509_KEY: |
@@ -131,10 +131,10 @@ metadata:
   name: kubeshark-nginx-config-map
   namespace: default
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
 data:
   default.conf: |
@@ -195,10 +195,10 @@ metadata:
   namespace: default
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
 data:
     POD_REGEX: '.*'
@@ -207,8 +207,8 @@ data:
     INGRESS_ENABLED: 'false'
     INGRESS_HOST: 'ks.svc.cluster.local'
     PROXY_FRONT_PORT: '8899'
-    AUTH_ENABLED: ''
-    AUTH_TYPE: 'saml'
+    AUTH_ENABLED: 'true'
+    AUTH_TYPE: 'oidc'
     AUTH_SAML_IDP_METADATA_URL: ''
     AUTH_SAML_ROLE_ATTRIBUTE: 'role'
     AUTH_SAML_ROLES: '{"admin":{"canDownloadPCAP":true,"canReplayTraffic":true,"canUpdateTargetedPods":true,"canUseScripting":true,"filter":"","showAdminConsoleLink":true}}'
@@ -223,16 +223,17 @@ data:
     PCAP_TTL: '10s'
     PCAP_ERROR_TTL: '60s'
     TIMEZONE: ' '
+    CLOUD_LICENSE_ENABLED: 'true'
 ---
 # Source: kubeshark/templates/02-cluster-role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-default
@@ -265,10 +266,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-cluster-role-binding-default
@@ -287,10 +288,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role
@@ -316,10 +317,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-self-config-role-binding
@@ -339,10 +340,10 @@ kind: Service
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -361,10 +362,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -390,10 +391,10 @@ metadata:
 spec:
   selector:
     app.kubeshark.co/app: worker
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   ports:
   - name: metrics
@@ -408,10 +409,10 @@ metadata:
   labels:
     app.kubeshark.co/app: worker
     sidecar.istio.io/inject: "false"
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-worker-daemon-set
@@ -426,10 +427,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: worker
-        helm.sh/chart: kubeshark-52.2.30
+        helm.sh/chart: kubeshark-52.2.39
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.2.30"
+        app.kubernetes.io/version: "52.2.39"
         app.kubernetes.io/managed-by: Helm
       name: kubeshark-worker-daemon-set
       namespace: kubeshark
@@ -464,7 +465,7 @@ spec:
             - /hostproc
             - -kernel-module
             - -disable-ebpf
-          image: 'docker.io/kubeshark/worker:v52.2.30'
+          image: 'docker.io/kubeshark/worker:v52.2.39'
           imagePullPolicy: Always
           name: sniffer
           ports:
@@ -530,7 +531,8 @@ spec:
             - ./tracer
             - -procfs
             - /hostproc
-          image: 'docker.io/kubeshark/worker:v52.2.30'
+            - -disable-ebpf
+          image: 'docker.io/kubeshark/worker:v52.2.39'
           imagePullPolicy: Always
           name: tracer
           env:
@@ -607,10 +609,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: hub
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-hub
@@ -626,10 +628,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: hub
-        helm.sh/chart: kubeshark-52.2.30
+        helm.sh/chart: kubeshark-52.2.39
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.2.30"
+        app.kubernetes.io/version: "52.2.39"
         app.kubernetes.io/managed-by: Helm
     spec:
       dnsPolicy: ClusterFirstWithHostNet
@@ -651,7 +653,7 @@ spec:
                 fieldPath: metadata.namespace
           - name: KUBESHARK_CLOUD_API_URL
             value: 'https://api.kubeshark.co'
-          image: 'docker.io/kubeshark/hub:v52.2.30'
+          image: 'docker.io/kubeshark/hub:v52.2.39'
           imagePullPolicy: Always
           readinessProbe:
             periodSeconds: 1
@@ -699,10 +701,10 @@ kind: Deployment
 metadata:
   labels:
     app.kubeshark.co/app: front
-    helm.sh/chart: kubeshark-52.2.30
+    helm.sh/chart: kubeshark-52.2.39
     app.kubernetes.io/name: kubeshark
     app.kubernetes.io/instance: kubeshark
-    app.kubernetes.io/version: "52.2.30"
+    app.kubernetes.io/version: "52.2.39"
     app.kubernetes.io/managed-by: Helm
   annotations:
   name: kubeshark-front
@@ -718,10 +720,10 @@ spec:
     metadata:
       labels:
         app.kubeshark.co/app: front
-        helm.sh/chart: kubeshark-52.2.30
+        helm.sh/chart: kubeshark-52.2.39
         app.kubernetes.io/name: kubeshark
         app.kubernetes.io/instance: kubeshark
-        app.kubernetes.io/version: "52.2.30"
+        app.kubernetes.io/version: "52.2.39"
         app.kubernetes.io/managed-by: Helm
     spec:
       containers:
@@ -729,9 +731,9 @@ spec:
             - name: REACT_APP_DEFAULT_FILTER
               value: ' '
             - name: REACT_APP_AUTH_ENABLED
-              value: 'false'
+              value: 'true'
             - name: REACT_APP_AUTH_TYPE
-              value: 'saml'
+              value: 'oidc'
             - name: REACT_APP_AUTH_SAML_IDP_METADATA_URL
               value: ' '
             - name: REACT_APP_TIMEZONE
@@ -744,7 +746,9 @@ spec:
               value: 'false'
             - name: REACT_APP_RECORDING_DISABLED
               value: 'false'
-          image: 'docker.io/kubeshark/front:v52.2.30'
+            - name: 'REACT_APP_CLOUD_LICENSE_ENABLED'
+              value: 'true'
+          image: 'docker.io/kubeshark/front:v52.2.39'
           imagePullPolicy: Always
           name: kubeshark-front
           livenessProbe:
